se realizó las secciones sobre mí y skills

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!--SECCIÓN HEADER-->
 
-<main class="seccion__principal sombra">
+<main class="seccion__principal contenedor__blanco sombra">
     <div class="contenedor__principal">
 
         <div class="contenedor__img">
@@ -88,12 +88,102 @@
     </div>
 </main>
 
+    <!--SECCIÓN SOBRE MÍ-->
+
+<section class="seccion__sobre__mi">
+    <h1 class="titulo__sobre__mi">
+        Sobre mí
+    </h1>
+    <div class="contenedor__sobre__mi contenedor__blanco">
+        <h2 class="subtitulo__sobre__mi">
+            ¡Hola! Soy una entusiasta Programadora Full Stack Jr y apasionada de la tecnología...
+        </h2>
+        <p class="descripcion__sobre__mi">
+            🌟 Cuento con una sólida formación en Química Farmacéutica Bióloga. Mi trayectoria en la ciencia me ha dotado de habilidades analíticas y de resolución de problemas que me permiten adaptarme ágilmente a los cambios y crear soluciones innovadoras en el ámbito tecnológico.
+        </p>
+        <p class="descripcion__sobre__mi">
+            🚀 Mi trayecto en el Desarrollo Front-End me ha brindado la habilidad de crear interfaces de usuario atractivas y funcionales, utilizando herramientas de diseño y organización. 📚 Actualmente, estoy inmersa en un emocionante camino en Java Full Stack, adquiriendo conocimientos sólidos en programación orientada a objetos y colaborando de manera efectiva en equipos multidisciplinarios.
+        </p>
+    </div>
+</section>
 
     <!--SECCIÓN DE SKILLS-->
 
+<section class="seccion__skills">
+    <h1 class="titulo__skills">
+        Habilidades
+    </h1>
+    <div class="contenedor__skills contenedor__sincolor">
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/html.svg" alt="Icono HTML">
+                </div>
+            </div>
+            <button class="btn__skill sombra">HTML</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/css.svg" alt="Icono CSS">
+                </div>
+            </div>
+            <button class="btn__skill sombra">CSS</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/javascript.svg" alt="Icono JavaScript">
+                </div>
+            </div>
+            <button class="btn__skill sombra">Javascript</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/java.svg" alt="Icono de Java">
+                </div>
+            </div>
+            <button class="btn__skill sombra">Java</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/git.svg" alt="Icono de Git">
+                </div>
+            </div>
+            <button class="btn__skill sombra">Git</button>
+        </div>
+        <div class="skill__card">
+            <div class="skill__card__cuadro sombra">
+                <div class="skill__card__img">
+                    <img src="./assets/img/mysql.svg" alt="Icono de MySQL">
+                </div>
+            </div>
+            <button class="btn__skill sombra">MySQL</button>
+        </div>
+    </div>
+</section>
 
-    <!--SECCIÓN SOBRE MÍ-->
+    <!--SECCIÓN DE FORMACIÓN ACADÉMICA-->
 
+<section class="seccion__formacion__academica contenedor__blanco">
+    <div class="contenedor__formacion__academica">
+        <div class="formacion__card">
+            <article class="card__general__formacion">
+                <div class="formacion__img">
+                    <img src="" alt="">
+                </div>
+                <h3 class="formacion__titulo">
+                    Universidad Autónoma de Nuevo León - 2022
+                </h3>
+                <p class="formacion__descripcion">
+                    Química Farmacéutica Bióloga
+                </p>
+            </article>
+        </div>
+    </div>
+</section>
 
     <!--SECCIÓN DE PROYECTOS PARA ACTUALIZAR-->
 
