se actualiza la sección de formación académica

--- a/index.html
+++ b/index.html
@@ -167,20 +167,68 @@
 
     <!--SECCIÓN DE FORMACIÓN ACADÉMICA-->
 
-<section class="seccion__formacion__academica contenedor__blanco">
-    <div class="contenedor__formacion__academica">
+<section class="seccion__formacion__academica">
+    <h1 class="titulo__formacion__academica">
+        Formación académica
+    </h1>
+    <div class="contenedor__formacion__academica contenedor__blanco">
         <div class="formacion__card">
             <article class="card__general__formacion">
                 <div class="formacion__img">
-                    <img src="" alt="">
+                    <img src="./assets/img/uanl_logo.jpg" alt="Logo UANL">
                 </div>
-                <h3 class="formacion__titulo">
-                    Universidad Autónoma de Nuevo León - 2022
-                </h3>
-                <p class="formacion__descripcion">
-                    Química Farmacéutica Bióloga
-                </p>
+                <div class="formacion__info">
+                    <h3 class="formacion__titulo">
+                        Universidad Autónoma de Nuevo León - 2022
+                    </h3>
+                    <p class="formacion__descripcion">
+                        Química Farmacéutica Bióloga
+                    </p>
+                </div>
             </article>
+
+            <article class="card__general__formacion">
+                <div class="formacion__img">
+                    <img src="./assets/img/alura_logo.png" alt="Logo Alura LATAM">
+                </div>
+                <div class="formacion__info">
+                    <h3 class="formacion__titulo">
+                        Alura LATAM - 2023
+                    </h3>
+                    <p class="formacion__descripcion">
+                        Formación Front End
+                    </p>
+                </div>
+            </article>
+
+            <article class="card__general__formacion">
+                <div class="formacion__img">
+                    <img src="./assets/img/Junior_Achievement_logo.jpg" alt="Logo JA Mujer Digital">
+                </div>
+                <div class="formacion__info">
+                    <h3 class="formacion__titulo">
+                        Junior Achievement México - 2023
+                    </h3>
+                    <p class="formacion__descripcion">
+                        Analista de Ciberseguridad
+                    </p>
+                </div>
+            </article>
+
+            <article class="card__general__formacion">
+                <div class="formacion__img">
+                    <img src="./assets/img/generation_logo.jpg" alt="Logo Generation">
+                </div>
+                <div class="formacion__info">
+                    <h3 class="formacion__titulo">
+                        Generation Mexico - 2023
+                    </h3>
+                    <p class="formacion__descripcion">
+                        Desarrolladora Java Full Stack
+                    </p>
+                </div>
+            </article>
+
         </div>
     </div>
 </section>
