--- a/index.html
+++ b/index.html
@@ -235,8 +235,92 @@
 
     <!--SECCIÓN DE PROYECTOS PARA ACTUALIZAR-->
 
+<section class="seccion__mis__proyectos">
+    <h1 class="titulo__formacion__academica">
+        Mis proyectos
+    </h1>
+    <div class="proyecto__actual contenedor__sincolor">
+        <div class="proyecto__actual__info">
+            <h2 class="titulo__proyecto__actual">
+                E-commerce: Consultorio Dental
+            </h2>
+            <p class="descripcion__proyecto__actual">
+                Plataforma de cuidado dental con diseño en Figma. Implementación con HTML, CSS y JavaScript para la interfaz, Java y Spring Boot para el backend, gestionando eficientemente el inicio de sesión. Base de datos manejada con MySQL. 
+            </p>
+            <div class="botones__proyecto__actual">
+                <button class="btn__repo">Repositorio</button>
+                <button class="btn__demo">Demo</button>
+            </div>
+        </div>
 
-    <!--FORMULARIO-->
+        <div class="proyecto__actual__img">
+            <img src="./assets/img/foto_proyecto.jpg" alt="Proyecto actual">
+        </div>
+    </div>
+</section>
+
+    <!--PROYECTOS RESTANTES-->
+
+    <section class="seccion__skills">
+        <div class="contenedor__skills contenedor__sincolor">
+            <div class="skill__card">
+                <div class="skill__card__cuadro sombra">
+                    <div class="skill__card__img">
+                        <img src="./assets/img/html.svg" alt="Icono HTML">
+                    </div>
+                </div>
+                <button class="btn__repo sombra">Repositorio</button>
+                <button class="btn__demo sombra">Demo</button>
+            </div>
+            <div class="skill__card">
+                <div class="skill__card__cuadro sombra">
+                    <div class="skill__card__img">
+                        <img src="./assets/img/css.svg" alt="Icono CSS">
+                    </div>
+                </div>
+                <button class="btn__repo sombra">Repositorio</button>
+                <button class="btn__demo sombra">Demo</button>
+            </div>
+            <div class="skill__card">
+                <div class="skill__card__cuadro sombra">
+                    <div class="skill__card__img">
+                        <img src="./assets/img/javascript.svg" alt="Icono JavaScript">
+                    </div>
+                </div>
+                <button class="btn__repo sombra">Repositorio</button>
+                <button class="btn__demo sombra">Demo</button>
+            </div>
+            <div class="skill__card">
+                <div class="skill__card__cuadro sombra">
+                    <div class="skill__card__img">
+                        <img src="./assets/img/java.svg" alt="Icono de Java">
+                    </div>
+                </div>
+                <button class="btn__repo sombra">Repositorio</button>
+                <button class="btn__demo sombra">Demo</button>
+            </div>
+            <div class="skill__card">
+                <div class="skill__card__cuadro sombra">
+                    <div class="skill__card__img">
+                        <img src="./assets/img/git.svg" alt="Icono de Git">
+                    </div>
+                </div>
+                <button class="btn__repo sombra">Repositorio</button>
+                <button class="btn__demo sombra">Demo</button>
+            </div>
+            <div class="skill__card">
+                <div class="skill__card__cuadro sombra">
+                    <div class="skill__card__img">
+                        <img src="./assets/img/mysql.svg" alt="Icono de MySQL">
+                    </div>
+                </div>
+                <button class="btn__repo sombra">Repositorio</button>
+                <button class="btn__demo sombra">Demo</button>
+            </div>
+        </div>
+    </section>
+
+    <!--CONTACTO-->
 
 
     <!--PIE DE PÁGINA-->
