se modifica la sección de proyectos

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                 Plataforma de cuidado dental con diseño en Figma. Implementación con HTML, CSS y JavaScript para la interfaz, Java y Spring Boot para el backend, gestionando eficientemente el inicio de sesión. Base de datos manejada con MySQL. 
             </p>
             <div class="botones__proyecto__actual">
-                <button class="btn__repo">Repositorio</button>
-                <button class="btn__demo">Demo</button>
+                <a href="https://github.com/KeniaMontalvo/ConsultorioDental_ecommerce" target="_blank"><button class="btn__repo">Repositorio</button></a>
+                <a href=""><button class="btn__demo">Demo</button></a>
             </div>
         </div>
 
@@ -261,66 +261,132 @@
 
     <!--PROYECTOS RESTANTES-->
 
-    <section class="seccion__skills">
-        <div class="contenedor__skills contenedor__sincolor">
-            <div class="skill__card">
-                <div class="skill__card__cuadro sombra">
-                    <div class="skill__card__img">
-                        <img src="./assets/img/html.svg" alt="Icono HTML">
+<section class="seccion__skills">
+        <div class="contenedor__projects contenedor__sincolor">
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/thumbnail.png" alt="Imagen MarkPetPlace">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            E-commerce: MarkPetPlace
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, JS, Bootstrap, Java, Spring Boot, MySQL
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href=""><button disabled class="sombra btn_disabled">Repositorio</button></a>
+                        <a href="https://marketpetplacemvp.onrender.com/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
-                <button class="btn__repo sombra">Repositorio</button>
-                <button class="btn__demo sombra">Demo</button>
             </div>
-            <div class="skill__card">
-                <div class="skill__card__cuadro sombra">
-                    <div class="skill__card__img">
-                        <img src="./assets/img/css.svg" alt="Icono CSS">
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/encriptador.png" alt="Imagen Encriptador">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            Encriptador de texto
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, Javascript
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/challenge-encriptador" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
+                        <a href="https://keniamontalvo.github.io/challenge-encriptador/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
-                <button class="btn__repo sombra">Repositorio</button>
-                <button class="btn__demo sombra">Demo</button>
             </div>
-            <div class="skill__card">
-                <div class="skill__card__cuadro sombra">
-                    <div class="skill__card__img">
-                        <img src="./assets/img/javascript.svg" alt="Icono JavaScript">
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/alurabts.png" alt="Imagen AluraBTS">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            E-commerce: AluraBTS
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, Javascript
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/challenge-alurabts-ecommerce" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
+                        <a href="https://keniamontalvo.github.io/challenge-alurabts-ecommerce/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
-                <button class="btn__repo sombra">Repositorio</button>
-                <button class="btn__demo sombra">Demo</button>
             </div>
-            <div class="skill__card">
-                <div class="skill__card__cuadro sombra">
-                    <div class="skill__card__img">
-                        <img src="./assets/img/java.svg" alt="Icono de Java">
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/portfolio.png" alt="Imagen Portfolio">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            Portfolio Alura
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, Javascript
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/challenge-miportafolio" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
+                        <a href="https://keniamontalvo.github.io/challenge-miportafolio/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
-                <button class="btn__repo sombra">Repositorio</button>
-                <button class="btn__demo sombra">Demo</button>
             </div>
-            <div class="skill__card">
-                <div class="skill__card__cuadro sombra">
-                    <div class="skill__card__img">
-                        <img src="./assets/img/git.svg" alt="Icono de Git">
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/pokeapi.png" alt="Imagen PokeAPI">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            PokeAPI
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, Javascript
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/PokeAPI" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
+                        <a href="https://keniamontalvo.github.io/PokeAPI/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
-                <button class="btn__repo sombra">Repositorio</button>
-                <button class="btn__demo sombra">Demo</button>
             </div>
-            <div class="skill__card">
-                <div class="skill__card__cuadro sombra">
-                    <div class="skill__card__img">
-                        <img src="./assets/img/mysql.svg" alt="Icono de MySQL">
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/clongoogle.png" alt="Imagen Google">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            Clonación de Google
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/clondegoogle" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
+                        <a href="https://keniamontalvo.github.io/clondegoogle/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
-                <button class="btn__repo sombra">Repositorio</button>
-                <button class="btn__demo sombra">Demo</button>
             </div>
         </div>
-    </section>
+</section>
 
     <!--CONTACTO-->
+
+<section class="contenedor__contacto contenedor__blanco">
+    <h1 class="titulo__contacto">
+        Contacto
+    </h1>
+</section>
 
 
     <!--PIE DE PÁGINA-->
