--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
     
                 <div class="info__btn">
-                    <a href=""><button class="btn__principal">Contacto</button></a>
+                    <a href="#contacto"><button class="btn__principal">Contacto</button></a>
                 </div>
 
             </div>
@@ -382,10 +382,25 @@
 
     <!--CONTACTO-->
 
-<section class="contenedor__contacto contenedor__blanco">
-    <h1 class="titulo__contacto">
-        Contacto
-    </h1>
+<section class="seccion__contacto" id="contacto">
+    <div class="contenedor__contacto contenedor__blanco">
+        <h1 class="titulo__contacto">
+            Contacto
+        </h1>
+        <p class="subtitulo__contacto">
+            Favor de completar el siguiente formulario y me pondré en contacto con usted lo antes posible.
+        </p>
+        <div class="form__contacto__contenedor">
+            <form action="" class="formulario__contenedor">
+                <input type="text" placeholder="Nombre" class="input_form"> 
+                <input type="email" placeholder="Correo electrónico" class="input_form">
+                <input type="text" placeholder="Asunto" class="input_form">
+                <textarea name="" id="" cols="30" rows="10" class="textarea_form" placeholder="Mensaje" maxlength="300">
+                </textarea>
+                <button type="submit" class="btn__principal">Enviar</button>
+            </form>
+        </div>
+    </div>
 </section>
 
 
