--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
             <div class="contenedor__info__datos__enlaces">
                 <ul class="list__redes__sociales__principal">
-                    <li class="item__list__redes__principales"><a href="mailto:liz_kenia98@hotmail.com" class="enlace__red__imagen" target="_blank"><img src="./assets/img/baseline-email.svg" alt="">liz_kenia98@hotmail.com</a></li>
-                    <li class="item__list__redes__principales"><a href="https://www.linkedin.com/in/kenia-montalvo/" target="_blank" class="enlace__red__imagen" class="enlace__red__imagen"><img src="./assets/img/linkedin.svg" alt="">Kenia Montalvo</a></li>
-                    <li class="item__list__redes__principales"><a href="https://github.com/KeniaMontalvo" target="_blank" class="enlace__red__imagen"><img src="./assets/img/github.svg" alt="">Kenia Montalvo</a></li>
-                    <li class="item__list__redes__principales"><a href="https://www.canva.com/design/DAFyYBsAs-w/fMTq2sDYr3XmI0C3fGkfHw/edit?utm_content=DAFyYBsAs-w&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="enlace__red__imagen"><img src="./assets/img/cv.svg" alt="">CV</a></li>
+                    <li class="item__list__redes__principales"><a href="mailto:liz_kenia98@hotmail.com" class="enlace__red__imagen" target="_blank"><img src="./assets/img/baseline-email.svg" alt="Icono email">liz_kenia98@hotmail.com</a></li>
+                    <li class="item__list__redes__principales"><a href="https://www.linkedin.com/in/kenia-montalvo/" target="_blank" class="enlace__red__imagen" class="enlace__red__imagen"><img src="./assets/img/linkedin.svg" alt="Icono Linkedin">Kenia Montalvo</a></li>
+                    <li class="item__list__redes__principales"><a href="https://github.com/KeniaMontalvo" target="_blank" class="enlace__red__imagen"><img src="./assets/img/github.svg" alt="Icono GitHub">Kenia Montalvo</a></li>
+                    <li class="item__list__redes__principales"><a href="https://drive.google.com/file/d/1cl4ESGA6oDUIGAShqUgwhIUQqBm3oMUw/view?usp=sharing" target="_blank" target="_blank" class="enlace__red__imagen"><img src="./assets/img/cv.svg" alt="Icono CV">CV</a></li>
                 </ul>
             </div>
 
@@ -418,21 +418,21 @@
         <div class="nav__footer">
             <ul class="list__nav__footer">
                 <li class="item__nav__footer"><a href=""><img src="./assets/img/flower-fill.svg" alt="Icono Flor" class="icon_footer"></a></li>
-                <li class="item__nav__footer"><a href="">Inicio</a></li>
-                <li class="item__nav__footer"><a href="">Sobre mí</a></li>
-                <li class="item__nav__footer"><a href="">Habilidades</a></li>
-                <li class="item__nav__footer"><a href="">Proyectos</a></li>
-                <li class="item__nav__footer"><a href="">Formación académica</a></li>
-                <li class="item__nav__footer"><a href="">Contacto</a></li>
+                <li class="item__nav__footer"><a href="#inicio">Inicio</a></li>
+                <li class="item__nav__footer"><a href="#sobre-mi">Sobre mí</a></li>
+                <li class="item__nav__footer"><a href="#habilidades">Habilidades</a></li>
+                <li class="item__nav__footer"><a href="#proyectos">Proyectos</a></li>
+                <li class="item__nav__footer"><a href="#formacion-academica">Formación académica</a></li>
+                <li class="item__nav__footer"><a href="#contacto">Contacto</a></li>
             </ul>
         </div>
         <div class="iconos__footer">
             <ul class="list__iconos__footer">
-                <li class="item__iconos__footer"><a href=""><img src="./assets/img/instagram-fill.svg" alt="Icono Instagram" class="icon_footer"></a></li>
-                <li class="item__iconos__footer"><a href=""><img src="./assets/img/linkedin.svg" alt="Icono Linkedin" class="icon_footer"></a></li>
-                <li class="item__iconos__footer"><a href=""><img src="./assets/img/github.svg" alt="Icono GitHub" class="icon_footer"></a></li>
-                <li class="item__iconos__footer"><a href=""><img src="./assets/img/cv.svg" alt="Icono Currículum" class="icon_footer"></a></li>
-                <li class="item__iconos__footer"><a href="mailto:liz_kenia98@hotmail.com"><img src="./assets/img/baseline-email.svg" alt="Icono emal" class="icon_footer"></a></li>
+                <li class="item__iconos__footer"><a href="https://www.instagram.com/kenia_montalvo/" target="_blank"><img src="./assets/img/instagram-fill.svg" alt="Icono Instagram" class="icon_footer"></a></li>
+                <li class="item__iconos__footer"><a href="https://www.linkedin.com/in/kenia-montalvo/" target="_blank"><img src="./assets/img/linkedin.svg" alt="Icono Linkedin" class="icon_footer"></a></li>
+                <li class="item__iconos__footer"><a href="https://github.com/KeniaMontalvo" target="_blank"><img src="./assets/img/github.svg" alt="Icono GitHub" class="icon_footer"></a></li>
+                <li class="item__iconos__footer"><a href="https://drive.google.com/file/d/1cl4ESGA6oDUIGAShqUgwhIUQqBm3oMUw/view?usp=sharing" target="_blank"><img src="./assets/img/cv.svg" alt="Icono Currículum" class="icon_footer"></a></li>
+                <li class="item__iconos__footer"><a href="mailto:liz_kenia98@hotmail.com"><img src="./assets/img/baseline-email.svg" alt="Icono email" class="icon_footer"></a></li>
             </ul>
         </div>
         <div class="firma__footer">
