se modificaron las tarjetas de formacion academica

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@
 
     <!--SECCIÓN DE PROYECTOS PARA ACTUALIZAR-->
 
-<section class="seccion__mis__proyectos" id="proyectos">
+    <!--
+<section class="seccion__mis__proyectos">
     <h1 class="titulo__formacion__academica">
         Mis proyectos
     </h1>
@@ -258,10 +259,11 @@
         </div>
     </div>
 </section>
-
+    -->
+    
     <!--PROYECTOS RESTANTES-->
 
-<section class="seccion__skills">
+<section class="seccion__skills" id="proyectos">
         <div class="contenedor__projects contenedor__sincolor">
             <div class="project__card">
                 <div class="project__card__cuadro sombra">
@@ -278,6 +280,25 @@
                     </div>
                     <div class="proyectos__botones__contenedor">
                         <a href=""><button disabled class="sombra btn_disabled">Repositorio</button></a>
+                        <a href="https://marketpetplacemvp.onrender.com/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/foto_proyecto.jpg" alt="Imagen Consultorio Dental">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            E-commerce: Mi Diente Feliz
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, JS, Bootstrap, Java, Spring Boot, MySQL
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/ConsultorioDental_ecommerce" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
                         <a href="https://marketpetplacemvp.onrender.com/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
