se agregaron dos proyectos

--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
                             E-commerce: Mi Diente Feliz
                         </h4>
                         <p class="project__card__descripcion">
-                            HTML, CSS, JS, Bootstrap, Java, Spring Boot, MySQL
+                            HTML, CSS, JS, Java, Spring Boot, MySQL
                         </p>
                     </div>
                     <div class="proyectos__botones__contenedor">
                         <a href="https://github.com/KeniaMontalvo/ConsultorioDental_ecommerce" target="_blank"><button class="btn__repo__secundario sombra">Repositorio</button></a>
-                        <a href="https://marketpetplacemvp.onrender.com/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
+                        <a href="https://keniamontalvo.github.io/ConsultorioDental_ecommerce/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
                     </div>
                 </div>
             </div>
@@ -398,6 +398,26 @@
                     </div>
                 </div>
             </div>
+            <div class="project__card">
+                <div class="project__card__cuadro sombra">
+                    <div class="project__card__img">
+                        <img src="./assets/img/boda.png" alt="Imagen Invitación">
+                    </div>   
+                    <div class="project__card__info">
+                        <h4 class="project__card__titulo">
+                            Invitación de boda
+                        </h4>
+                        <p class="project__card__descripcion">
+                            HTML, CSS, JS
+                        </p>
+                    </div>
+                    <div class="proyectos__botones__contenedor">
+                        <a href="https://github.com/KeniaMontalvo/clondegoogle" target="_blank"><button class="btn_disabled sombra">Repositorio</button></a>
+                        <a href="https://anayangel.netlify.app/" target="_blank"><button class="btn__demo__secundario sombra">Demo</button></a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 </section>
 
