actualización de trabajo actual

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
     
                     <h3 class="info__datos__puesto">
-                        Desarrolladora Java Full Stack
+                        Information Security Intern
                     </h3>
     
                     <h3 class="info__datos__lugar">
