actualización de descripción sobre mí

--- a/index.html
+++ b/index.html
@@ -96,18 +96,14 @@
     </h1>
     <div class="contenedor__sobre__mi contenedor__blanco">
         <h2 class="subtitulo__sobre__mi">
-            ¡Hola! Soy una entusiasta programadora Full Stack y aspirante a analista de seguridad...
+            ¡Hola! estoy dentro del área de Seguridad de la Información con bases en Programación Full Stack y experiencia en Química Farmacéutica Bióloga...
         </h2>
         <p class="descripcion__sobre__mi">
-            🌟 Inicié mi trayectoria como desarrolladora Front-End y luego amplié mis habilidades al ámbito del
-            desarrollo Full Stack, adquiriendo destrezas analíticas y de resolución de problemas específicas para
-            este campo. Enfocada en obtener experiencia práctica, busco oportunidades desafiantes en
-            ciberseguridad con el propósito de aplicar y desarrollar mis habilidades en un entorno laboral dinámico
-            y contribuir al éxito del equipo.
+            🌟 Inicié mi trayectoria como desarrolladora Front-End, donde aprendí a crear interfaces atractivas y funcionales. Con el tiempo, amplié mis habilidades al desarrollo Full Stack, donde  abordé desafíos técnicos más complejos.
             
         </p>
         <p class="descripcion__sobre__mi">
-            🚀 Impulsada por un compromiso con el aprendizaje práctico, estoy buscando activamente oportunidades que brinden exposición práctica y desafíen mis habilidades en el campo de la ciberseguridad. 📚 Mi enfoque está en roles que no solo me permitan aplicar las competencias técnicas adquiridas en mi trayectoria, sino que también fomenten el desarrollo continuo en un entorno de trabajo estimulante y colaborativo.
+            🚀 Hoy me desempeño como Information Security Intern, involucrándome en actividades como la configuración de reglas de firewall en Palo Alto, la gestión de cambios (Change Management), la automatización de tareas con PowerShell, y la creación de dashboards en Power BI para el análisis de métricas de seguridad. 📚 Busco especializarme en el campo de la Seguridad de la Información. Mi meta es seguir creciendo en un entorno dinámico y colaborativo.
         </p>
     </div>
 </section>
